分布式组件-消息中间件-一期 基础能力调整